--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ multidict==6.0.4
 nltk==3.8.1
 numpy==1.25.0
 openai==0.27.8
+opencv-python==4.8.0.74
 packaging==23.1
 pandas==2.0.3
 Pillow==9.5.0
