--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.8.4
 aiosignal==1.3.1
 alt-profanity-check==1.2.2
 altair==5.0.1
+asttokens==2.4.1
 async-timeout==4.0.2
 attrs==23.1.0
 beautifulsoup4==4.12.2
@@ -11,9 +12,12 @@ certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.4
 colorama==0.4.6
+comm==0.1.4
 contourpy==1.1.0
 cycler==0.11.0
+debugpy==1.8.0
 decorator==5.1.1
+executing==2.0.1
 Faker==18.11.2
 favicon==0.7.0
 fonttools==4.40.0
@@ -23,10 +27,15 @@ GitPython==3.1.31
 htbuilder==0.6.1
 idna==3.4
 importlib-metadata==6.7.0
+ipykernel==6.26.0
+ipython==8.17.2
+jedi==0.19.1
 Jinja2==3.1.2
 joblib==1.3.1
 jsonschema==4.18.0
 jsonschema-specifications==2023.6.1
+jupyter_client==8.5.0
+jupyter_core==5.5.0
 kiwisolver==1.4.4
 lxml==4.9.3
 Markdown==3.4.3
@@ -34,29 +43,36 @@ markdown-it-py==3.0.0
 markdownlit==0.0.7
 MarkupSafe==2.1.3
 matplotlib==3.7.2
+matplotlib-inline==0.1.6
 mdurl==0.1.2
 more-itertools==9.1.0
 multidict==6.0.4
+nest-asyncio==1.5.8
 nltk==3.8.1
 numpy==1.25.0
 openai==0.27.8
 opencv-python==4.8.0.74
 packaging==23.1
 pandas==2.0.3
+parso==0.8.3
 Pillow==9.5.0
 pip==23.1.2
+platformdirs==3.11.0
+prompt-toolkit==3.0.39
 protobuf==4.23.4
-pyarrow==12.0.1
+psutil==5.9.6
+pure-eval==0.2.2
+pyarrow==14.0.1
 pydeck==0.8.1b0
 Pygments==2.15.1
 pymdown-extensions==10.0.1
 Pympler==1.0.1
-pyodbc==4.0.39
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
+pyzmq==25.1.1
 referencing==0.29.1
 regex==2023.6.3
 requests==2.31.0
@@ -70,6 +86,7 @@ six==1.16.0
 smmap==5.0.0
 soupsieve==2.4.1
 st-annotated-text==4.0.0
+stack-data==0.6.3
 streamlit==1.24.0
 streamlit-camera-input-live==0.2.0
 streamlit-card==0.0.61
@@ -88,12 +105,14 @@ toml==0.10.2
 toolz==0.12.0
 tornado==6.3.2
 tqdm==4.65.0
+traitlets==5.13.0
 typing_extensions==4.7.1
 tzdata==2023.3
 tzlocal==4.3.1
 urllib3==2.0.3
 validators==0.20.0
 watchdog==3.0.0
+wcwidth==0.2.9
 wheel==0.38.4
 yarl==1.9.2
 zipp==3.15.0
