--- a/compose.yaml
+++ b/compose.yaml
@@ -12,38 +12,22 @@ services:
     build:
       context: .
     ports:
-      - 8000:8000
+      - 8501:8501
+    environment:
+      # Open AI information
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+    volumes:
+      - pokemon:/app/data
+    depends_on:
+      - db
 
-# The commented out section below is an example of how to define a PostgreSQL
-# database that your application can use. `depends_on` tells Docker Compose to
-# start the database before your application. The `db-data` volume persists the
-# database data between container restarts. The `db-password` secret is used
-# to set the database password. You must create `db/password.txt` and add
-# a password of your choosing to it before running `docker compose up`.
-#     depends_on:
-#       db:
-#         condition: service_healthy
-#   db:
-#     image: postgres
-#     restart: always
-#     user: postgres
-#     secrets:
-#       - db-password
-#     volumes:
-#       - db-data:/var/lib/postgresql/data
-#     environment:
-#       - POSTGRES_DB=example
-#       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
-#     expose:
-#       - 5432
-#     healthcheck:
-#       test: [ "CMD", "pg_isready" ]
-#       interval: 10s
-#       timeout: 5s
-#       retries: 5
-# volumes:
-#   db-data:
-# secrets:
-#   db-password:
-#     file: db/password.txt
+  db:
+    image: "keinos/sqlite3:latest"
+    command: "echo .schema | sqlite3 /var/lib/sqlite/pokemon.db"
+    volumes:
+      - pokemon:/var/lib/sqlite
+
+volumes:
+  pokemon:
+
 
