--- a/requirements.txt
+++ b/requirements.txt
@@ -67,6 +67,7 @@ pydeck==0.8.1b0
 Pygments==2.15.1
 pymdown-extensions==10.0.1
 Pympler==1.0.1
+pyodbc==4.0.39
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
