--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,28 @@ aiohttp==3.8.4
 aiosignal==1.3.1
 alt-profanity-check==1.2.2
 altair==5.0.1
+annotated-types==0.6.0
+anyio==3.7.1
 asttokens==2.4.1
 async-timeout==4.0.2
 attrs==23.1.0
+azure-core==1.29.5
+azure-identity==1.15.0
 beautifulsoup4==4.12.2
 blinker==1.6.2
 cachetools==5.3.1
 certifi==2023.5.7
+cffi==1.16.0
 charset-normalizer==3.1.0
 click==8.1.4
 colorama==0.4.6
 comm==0.1.4
 contourpy==1.1.0
+cryptography==41.0.5
 cycler==0.11.0
 debugpy==1.8.0
 decorator==5.1.1
+distro==1.8.0
 executing==2.0.1
 Faker==18.11.2
 favicon==0.7.0
@@ -24,7 +31,10 @@ fonttools==4.40.0
 frozenlist==1.3.3
 gitdb==4.0.10
 GitPython==3.1.31
+h11==0.14.0
 htbuilder==0.6.1
+httpcore==1.0.2
+httpx==0.25.1
 idna==3.4
 importlib-metadata==6.7.0
 ipykernel==6.26.0
@@ -46,6 +56,8 @@ matplotlib==3.7.2
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 more-itertools==9.1.0
+msal==1.25.0
+msal-extensions==1.0.0
 multidict==6.0.4
 nest-asyncio==1.5.8
 nltk==3.8.1
@@ -56,15 +68,20 @@ packaging==23.1
 pandas==2.0.3
 parso==0.8.3
 Pillow==9.5.0
-pip==23.1.2
+pip==23.3.1
 platformdirs==3.11.0
+portalocker==2.8.2
 prompt-toolkit==3.0.39
 protobuf==4.23.4
 psutil==5.9.6
 pure-eval==0.2.2
 pyarrow==14.0.1
+pycparser==2.21
+pydantic==2.4.2
+pydantic_core==2.10.1
 pydeck==0.8.1b0
 Pygments==2.15.1
+PyJWT==2.8.0
 pymdown-extensions==10.0.1
 Pympler==1.0.1
 pyodbc==4.0.39
@@ -85,6 +102,7 @@ seaborn==0.12.2
 setuptools==67.8.0
 six==1.16.0
 smmap==5.0.0
+sniffio==1.3.0
 soupsieve==2.4.1
 st-annotated-text==4.0.0
 stack-data==0.6.3
